k8s/platform/components/devops-tools/jenkins/jenkins-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-ui-route
  namespace: devops-tools
  labels:
    part-of: microservices-platform
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jenkins.desarrollo`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
